--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ meta filter=lfs diff=lfs merge=lfs -text
 .png filter=lfs diff=lfs merge=lfs -text
 .dll filter=lfs diff=lfs merge=lfs -text
 .xml filter=lfs diff=lfs merge=lfs -text
+.bundle filter=lfs diff=lfs merge=lfs -text
