--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,6 @@ meta filter=lfs diff=lfs merge=lfs -text
 .xml filter=lfs diff=lfs merge=lfs -text
 .bundle filter=lfs diff=lfs merge=lfs -text
 bundle filter=lfs diff=lfs merge=lfs -text
+FirebaseCppApp-11_1_0.bundle filter=lfs diff=lfs merge=lfs -text
+FirebaseCppApp-11_1_0 filter=lfs diff=lfs merge=lfs -text
+FirebaseCppApp filter=lfs diff=lfs merge=lfs -text
