--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+text=auto
 .cs filter=lfs diff=lfs merge=lfs -text
 meta filter=lfs diff=lfs merge=lfs -text
 .png filter=lfs diff=lfs merge=lfs -text
